--- a/asignacionAula3/app/build.gradle
+++ b/asignacionAula3/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'asignacionaula3.App'
+    mainClass = 'asignacionaula3.Main'
 }
 
 tasks.named('test') {
