--- a/proyecto/build.gradle
+++ b/proyecto/build.gradle
@@ -8,7 +8,7 @@ group = 'pucmm.edu'
 version = '1.0-SNAPSHOT'
 String openapi =  "5.3.2"
 
-mainClassName='edu.pucmm.Main'
+mainClassName='pucmm.edu.Main'
 
 repositories {
     mavenCentral()
